--- a/hackathon/requirements.txt
+++ b/hackathon/requirements.txt
@@ -1,4 +1,9 @@
-
+boto
+boto3
+cryptography
+urllib3
+requests
+gunicorn
 firebase-admin==2.17.0
 google-api-core==1.13.0
 google-api-python-client==1.7.9
